--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 import { TELEGRAM, VK, YOUTUBE } from "../consts";
-import logo from "/logo.svg"
+import logo from "/assets/logo.svg"
 ---
 
 <div id="toUp" class="toUp">
