--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -6,7 +6,7 @@ import Link from "./Link.astro";
   <div class="container nav-container">
     <div class="nav-div">
       <Link href="/">🏠 Главная</Link>
-      <Link href="/blog">📁 Блог</Link>
+      <Link href="/blog">📁 Заметки</Link>
       <Link href="/groups">🫂 Собрания</Link>
     </div>
   </div>
