--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,7 @@
 ---
-import astro from "/astro.svg";
-import logo from "/logo.svg";
+import { BASE_FILES, COPYRIGHT, TELEGRAM, VK, YOUTUBE } from "../consts";
+import logo from "/assets/logo.svg";
 const posts = await Astro.glob("../pages/posts/*.{md,mdx}");
-import { VK, YOUTUBE, TELEGRAM, COPYRIGHT, RKO, BASE_FILES } from "../consts";
 ---
 
 <div class="top"></div>
@@ -18,14 +17,12 @@ import { VK, YOUTUBE, TELEGRAM, COPYRIGHT, RKO, BASE_FILES } from "../consts";
     <div class="col-footer">
      <span>Информация</span>
      <a href={TELEGRAM}>Онлайн собрания АИЗ</a>
-     <!-- <a href={RKO}>Собрания объеденных комитетов (РКО) АИЗ</a> -->
+     <a href="https://t.me/aiz_rko">Комитет АИЗ</a>
     </div>
     <div class="col-footer">
      <span>Страницы</span>
-     <a href="/blog">Блог</a>
+     <a href="/blog">Заметки</a>
      <a href="/groups">Собрания</a>
-     <a href={BASE_FILES}>Библиотека</a>
-     <!-- <a href="/stories">Личные истории</a> -->
     </div>
     <div class="col-footer">
      <span>Посты</span>
@@ -38,7 +35,7 @@ import { VK, YOUTUBE, TELEGRAM, COPYRIGHT, RKO, BASE_FILES } from "../consts";
      }
     </div>
     <div class="col-footer">
-     <span>Библиотека</span>
+     <span>Ссылки</span>
      <a href={BASE_FILES}>12 шагов - база знаний</a>
     </div>
    </div>
@@ -50,9 +47,6 @@ import { VK, YOUTUBE, TELEGRAM, COPYRIGHT, RKO, BASE_FILES } from "../consts";
      <a href={VK} target="_blank">ВКонтакте</a>
      <a href={TELEGRAM} target="_blank">Телеграм</a>
      <a href={YOUTUBE} target="_blank">Ютуб</a>
-    </div>
-    <div class="astro">
-     <a href="https://astro.build/"><img src={astro} alt="astro generator" /><a> </a></a>
     </div>
    </div>
   </div>
