--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -7,6 +7,7 @@ import Link from "./Link.astro";
   class="bg-white p-2 rounded-[10px]  text-center w-full flex items-center max-w-fit grow gap-2 overflow-x-auto"
  >
   <Link href="/">🏠 Главная</Link>
+  <Link href="https://t.me/+2VhmiTsw1oYxYmIy">📲 Присоединиться</Link>
   <Link href="/groups">🎁 Собрания</Link>
   <Link href="/posts">🎈 Посты</Link>
   <Link href="/notes">🎄 Заметки</Link>
