--- a/src/layout/Post.astro
+++ b/src/layout/Post.astro
@@ -16,7 +16,7 @@ const {
 ---
 
 <Layout title={title} desc={description} typeSite="article" pubDate={pubDate}>
- <main class="px-5">
+ <main class="p-5">
   <div
    class="mx-auto max-w-[780px] prose prose-a:text-blue-500 prose-a:no-underline prose-stone"
   >
