--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,7 @@ import BlockMsgs from "../components/blocks/BlockMsgs.astro";
 import Title from "../components/blocks/Title.astro";
 import Layout from "../layout/Layout.astro";
 
-const p = "";
-const span = "text-[26px]";
+const p = "leading-relaxed";
 ---
 
 <Layout
@@ -19,31 +18,33 @@ const span = "text-[26px]";
 
    <div class="grid items-start gap-10 grid-cols-1 md:grid-cols-2">
     <div class={p}>
-     <span class={span}>👥</span>
      <p>
-      <b>АИЗ сообщество</b> мужчин и женщин, которые поддерживают друг друга в преодолении
-      проблем, вызванных конструктивным, одержимым или импульсивным использованием интернета.
+      <b>АИЗ сообщество людей,</b> которые поддерживают друг друга в преодолении проблем, вызванных
+      деструктивным, одержимым и компульсивным использованием интернета и гаджетов.
      </p>
     </div>
     <div class={p}>
-     <span class={span}>🔭</span>
      <p>
       <b>Сообщество АИЗ</b> не связаны ни с какой политической, религиозной или правоохранительной
       организацией, и не находимся ни под чьим контролем.
      </p>
     </div>
     <div class={p}>
-     <span class={span}>📱</span>
      <p>
       <b>Наша цель</b> воздерживаться от разрушительного использования интернета и помочь другим
       страдающим от этой зависимости.
      </p>
     </div>
     <div class={p}>
-     <span class={span}>✅</span>
      <p>
-      <b>Присоединиться к нам</b> - может каждый, независимо от возраста, пола, национальности,
-      убеждений, религии, или отсутствия таковой.
+      <b>Присоединиться к нам</b>- может каждый, независимо от возраста, пола,
+      национальности, убеждений, религии, или отсутствия таковой.
+     </p>
+    </div>
+    <div class={p}>
+     <p>
+      <b>Единственным условием для членства в АИЗ</b> является желание преодолеть интернет-зависимость
+      и остановить компульсивное использование интернета и устройств.
      </p>
     </div>
    </div>
