--- a/src/pages/stories.astro
+++ b/src/pages/stories.astro
@@ -1,6 +1,7 @@
 ---
-import StoryItem from "../components/blocks/StoryItem.astro";
 import Layout from "../layout/Layout.astro";
+
+const story = await Astro.glob("./stories/*.{md,mdx}");
 ---
 
 <Layout
@@ -8,36 +9,20 @@ import Layout from "../layout/Layout.astro";
  desc="Личные истории членов АИЗ, которые прошли путь и пришли к душевному спокойствию."
 >
  <div class="container">
-  <section class="histories">
-   <div class="grid">
-    <!-- Начало -->
-    <StoryItem />
-    <!-- Конец -->
-   </div>
-  </section>
+  <div class="grid gap-5 grid-cols-2">
+   {
+    story.map((s) => (
+     <article class="flex flex-col gap-2 bg-white p-4 rounded-lg">
+      <h3 class="font-bold text-2xl">{s.frontmatter.title}</h3>
+      <p class="font-normal leading-relaxed text-gray-500 line-clamp-2">
+       {s.frontmatter.description}
+      </p>
+      <a href={s.url} class="underline underline-offset-4">
+       Читать полностью
+      </a>
+     </article>
+    ))
+   }
+  </div>
  </div>
 </Layout>
-
-<style>
- .histories {
-  border-radius: var(--border-large);
-  background-color: var(--white);
-  padding: 30px;
- }
- @media (max-width: 576px) {
-  .histories {
-   margin: var(--mt) -30px 0;
-  }
- }
- .grid {
-  display: grid;
-  align-items: flex-start;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 30px;
- }
- @media (max-width: 992px) {
-  .grid {
-   grid-template-columns: repeat(1, 1fr);
-  }
- }
-</style>
