--- a/src/pages/stories.astro
+++ b/src/pages/stories.astro
@@ -1,7 +1,10 @@
 ---
 import Layout from "../layout/Layout.astro";
 
-const story = await Astro.glob("./stories/*.{md,mdx}");
+const story = (await Astro.glob("./stories/*.{md,mdx}")).sort(
+ (a, b) =>
+  new Date(b.frontmatter.pubDate).valueOf() - new Date(a.frontmatter.pubDate).valueOf()
+);
 ---
 
 <Layout
