--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import { BASE_FILES, COPYRIGHT, TELEGRAM, VK, YOUTUBE } from "../consts";
-import Logo from './Logo.astro';
+import Logo from "./Logo.astro";
 
 const notes = await Astro.glob("../pages/notes/*.{md,mdx}");
 const posts = await Astro.glob("../pages/posts/*.{md,mdx}");
@@ -10,7 +10,9 @@ const posts = await Astro.glob("../pages/posts/*.{md,mdx}");
 <footer>
  <div class="container">
   <div class="top-footer">
-   <div class="grid-footer grid gap-10 grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-6">
+   <div
+    class="grid-footer grid gap-10 grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-6"
+   >
     <div class="col-footer">
      <div class="logo-footer">
       <Logo />
@@ -52,6 +54,7 @@ const posts = await Astro.glob("../pages/posts/*.{md,mdx}");
      <span>Полезные ссылки</span>
      <a href={BASE_FILES}>12 шагов - база знаний</a>
      <a href="https://t.me/solutionof12steps">АИЗ: группа 12 шагов</a>
+     <a href="https://t.me/all12_projects">Комитет проектов</a>
     </div>
    </div>
   </div>
