--- a/src/pages/groups.astro
+++ b/src/pages/groups.astro
@@ -1,11 +1,10 @@
 ---
 import Group from "../components/blocks/Group.astro";
-import { TELEGRAM } from '../consts';
 import Layout from "../layout/Layout.astro";
 
 const live_link =
  "https://2gis.ru/moscow/inside/4504235282805560?utm_referrer=https%3a%2f%2finternetaddicts.ru%2f&fa821dba_ipp_key=v1675869408712%2Fv33947245ba5adc7a72e273%2FDlq34nnVp7DCeNv8PWdapQ%3d%3d&fa821dba_ipp_uid=1671181696020%2fCdsnCwQhLNuooU3x%2fg2jA6oWiM3uYDU%2fEIUuClg%3d%3d";
-const online_link = TELEGRAM;
+const online_link = "https://t.me/aiz_itaa";
 ---
 
 <Layout
@@ -60,7 +59,6 @@ const online_link = TELEGRAM;
 </Layout>
 
 <style>
-
  .grid {
   padding: 30px;
   align-items: start;
