--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -4,14 +4,13 @@ import Link from "./Link.astro";
 
 <nav class="py-4 flex justify-center">
  <nav
-  class="bg-white p-2 rounded-[10px]  text-center w-full flex items-center max-w-fit grow gap-2 overflow-x-auto"
+  class="bg-white p-2 rounded-[10px] text-center w-full flex items-center max-w-fit grow gap-2 overflow-x-auto"
  >
   <Link href="/">🏠 Главная</Link>
-  <Link href="https://t.me/+2VhmiTsw1oYxYmIy">📲 Присоединиться</Link>
+  <Link href="https://t.me/aiz_itaa">📲 Присоединиться</Link>
   <Link href="/groups">🎁 Собрания</Link>
   <Link href="/posts">🎈 Посты</Link>
   <Link href="/notes">🎄 Заметки</Link>
   <Link href="/stories">🎞 Личные истории</Link>
  </nav>
 </nav>
-
