--- a/src/components/blocks/Title.astro
+++ b/src/components/blocks/Title.astro
@@ -1,7 +1,9 @@
 ---
 ---
 
-<h1 class="flex items-center gap-2 md:gap-5 flex-wrap text-[52px] sm:text-[60px] md:text-[70px]">
+<h1
+  class="flex items-center gap-2 md:gap-5 flex-wrap text-[52px] sm:text-[60px] md:text-[70px]"
+>
   <span
     class="block text-transparent bg-clip-text bg-gradient-to-br from-green-400 to-green-600"
     >Анонимные</span
