--- a/src/layout/Post.astro
+++ b/src/layout/Post.astro
@@ -1,23 +1,18 @@
 ---
-import Layout from "./Layout.astro"
+import Layout from './Layout.astro'
 
 export interface Props {
-
-  url: string;
-  title: string;
-  description: string;
-  pubDate?: string;
-
+  url: string
+  title: string
+  description: string
+  pubDate?: string
 }
 
-const {
-  title, description, pubDate, } = Astro.props;
+const { title, description, pubDate } = Astro.props
 ---
 
 <Layout title={title} desc={description} typeSite="article" pubDate={pubDate}>
- <main class="p-5">
-
-   <slot />
-
- </main>
+  <main class="p-5">
+    <slot />
+  </main>
 </Layout>
